docroot/themes/custom/emulsifymars/components/02-molecules/flexible-framer/_flexible-framer.scss
.flexible-framer {
  @include brand-border-overflow;

  position: relative;
  font-family: variable(primary-font);
  background-color: clr(subcolor-2);
  color: clr(primary);

  & .h2 {
    position: relative;
    font-family: variable(heading-font);
    font-weight: 300;
    font-stretch: normal;
    font-style: normal;
    color: clr(primary);
    text-align: center;
    padding-top: 8rem;
    font-size: 2.8rem;
    line-height: 2.8rem;

    @include medium {
      font-size: 4rem;
      line-height: 4rem;
    }

    @include large {
      font-size: 4.8rem;
      line-height: 4.8rem;
    }
  }

  & .divider {
    text-align: center;
    margin-top: 2rem;
    fill: clr(subcolor-1);
  }

  & .image-wrapper {
    display: flex;
    justify-content: center;
    align-items: flex-start;

    & img {
      width: 100%;
      height: 100%;
      object-fit: cover;

      &:hover {
        transform: scale(1.1);
        transition: transform 0.8s;
      }  
    }    
  }

  & .grid--card {
    margin: 4rem 2rem 0 2rem;
    padding-bottom: 3rem;

    @include xs {
      flex-flow: column;
    }

    @include medium {
      margin: 4rem 4rem 0 4rem;
      padding-bottom: 4rem;
      flex-flow: row;
      flex-grow: 1;
      align-items: stretch;
    }

    @include large {
      padding-bottom: 6rem;
      flex-flow: row nowrap;
    }

    & .image-background {
      display: inline-block;
      margin: 0 auto;
      max-width: 80%;
    }

    & .card {
      text-align: center;
      align-items: center;

      &__heading {
        margin-top: 3rem;
        text-align: center;
        color: clr(primary);
        font-family: variable(primary-font);
        font-size: 2rem;
        line-height: 2.2rem;

        &-link {
          color: clr(primary);
          text-decoration: none;

          &:hover {
            color: clr(secondary);
          }
        }

        @include large {
          margin-top: 6rem;
          font-size: 2.4rem;
          line-height: 2.64rem;
        }

        &:last-child {
          margin-bottom: 2rem;
        }
      }

      &__body {
        margin-top: 1.6rem;
        margin-bottom: 0;
        font-family: variable(secondary-font);
        font-size: 1.6rem;
        line-height: 1.4;
        flex: 1 0 auto;
        max-width: 549px;

        @include large {
          font-size: 1.8rem;
        }
      }

      & a.default-link {
        height: 5rem;
        width: 13.3rem;
        line-height: 5rem;
        background-color: clr(secondary);
        font-size: 1.4rem;
        border: none;
        padding: 0;

        @include medium {
          font-size: 1.6rem;
          width: 15.7rem;
        }

        @include large {
          height: 6rem;
          line-height: 6rem;
          width: 20.2rem;
        }

        &:hover {
          color: clr(secondary);
        }
      }
    }

  }

  .grid-items-2 {
    .image-wrapper {
      @include large {
        min-height: calc((100vw/2) * 0.5625);
        flex: 0 0 auto;
      }
    }
  }

  .grid-items-3 {
    .image-wrapper {
      @include large {
        min-height: calc((100vw/3) * 0.5625);
        flex: 0 0 auto;
      }
    }
    .card__body{
      max-width: 433px;
    }
  }

  .grid-items-4 {
    .image-wrapper {
      @include large {
        min-height: calc((100vw/4) * 0.5625);
        flex: 0 0 auto;
      }
    }
    .card__body{
      max-width: 317px;
    }
  }

  & .grid__item {
    display: flex;
    flex-flow: column;

    @include medium {
      flex: 1 1 50%;
    }

    @include large {
      flex: 1 1 100%;
    }

    & .cta-wrapper {
      flex: 1 0 auto;
      display: flex;
      justify-content: center;
      align-items: flex-end;
      margin-top: 3rem;
      margin-bottom: 2rem;

      @include large {
        margin-top: 4rem;
      }
    }
  }

  &--related-recipes {

    & .image-wrapper {
      align-items: center;
    }

    & .grid--card {
      @include medium {
        align-items: stretch;
      }

      @include large {
        align-items: stretch;
      }

      & .image-background {
        margin: auto;
      }

      & .card__heading {
        margin-top: 4rem;
      }
    }

    & .grid__item {
      .brand-shape {
        display: none;
      }
      &:nth-child(2n-1) {
        & .image-background {
          position: relative;

          .image {
            position: relative;
          }

          .brand-shape {
            display: block;
            width: 100%;
            height: 100%;
            position: absolute;

            svg {
              width: 100%;
              height: 100%;
              max-width: 27.7rem;
              margin-left: 0%;
              fill: clr(subcolor-1);
              opacity: 0.2;
            }
          }

          &:hover {
            background-size: 77%;
            transition: background-size 0.8s ease;
          }

        }
      }
    }

    .grid-items-2 {
      .image-wrapper {
        @include large {
          min-height: calc((100vw/2) * 0.5625);
          flex: 0 0 auto;
        }
      }
    }

    .grid-items-3 {
      .image-wrapper {
        @include large {
          min-height: calc((100vw/3) * 0.5625);
          flex: 0 0 auto;
        }
      }
      .card__body{
        max-width: 433px;
      }
    }

    .grid-items-4 {
      .image-wrapper {
        @include large {
          min-height: calc((100vw/4) * 0.5625);
          flex: 0 0 auto;
        }
      }
      .card__body{
        max-width: 317px;
      }
    }
  }
}

